# OpenConstructionERP

./: .dockerignore  .env.example  .gitignore  .release-please-manifest.json  ACCESSIBILITY.md  AUTHORS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  COOKIES.md  ISSUE_109_HANDOVER.md  LICENSE  MODULES.md  Makefile  NOTICE  PATENTS.md  PRIVACY.md  R6_MERGE_137_138_REPORT.md  R6_PROPDEV_BUYER_EDIT_REPORT.md  R6_PROPDEV_SIDE_DRAWER_REPORT.md  R6_ZERO_WIDTH_STRIP_REPORT.md  README.md  SECURITY.md  TERMS.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  __qa_snippet.txt  ddl_echo.txt  docker-compose.quickstart.yml  qa_verify_out.txt  zzqacopy.txt
backend/: .env.example  CUsersArtem  README.md  openestimate.db-wal  probe_rank.py  pyproject.toml  requirements.txt
backend/_frontend_dist/: index.html
backend/_frontend_dist/assets/: AUExchangeModule-BeWrxbBG.js  AUExchangeModule-CtKo2gcq.js  AdvisorPage-DDQFT1Ik.js  AdvisorPage-DQ87KfCJ.js  AnalyticsPage-CLwa7_Xw.js  AnalyticsPage-yClU-xMD.js  ArchitectureMapPage-He9z1gs6.js  ArchitectureMapPage-UPy0FGKQ.js  AreaChart-DOVGQusv.js  AreaChart-DziCG4RC.js  AssetEditModal-BAqvocnh.js  AssetEditModal-B_eD3G4O.js  AssetsPage-Dp6SSVDR.js  AssetsPage-eHSBlkMD.js  BIMPage-CQ_rYukV.js  BIMPage-DadPJV22.js  BIMQuantityRulesPage-BubeBo9C.js  BIMQuantityRulesPage-abKOOSjG.js  BOQEditorPage-CrzVcHKs.js  BOQEditorPage-DfTdkATA.js  BRExchangeModule-DECSUuKn.js  BRExchangeModule-DzpFXfdI.js  BenchmarkModule-Dbso2XTR.js  BenchmarkModule-Dxf0FPTS.js  CAExchangeModule-BLrSb7Ly.js  CAExchangeModule-DpL5TqQ9.js  CDEPage-BM8P-vQh.js  CDEPage-DUD9CpK0.js  CNExchangeModule-BiVCW5z8.js  CNExchangeModule-Dcn3DxKz.js  CZExchangeModule-C2xUhn5S.js  CZExchangeModule-IXwO88B3.js  CadDataExplorerPage-BbcmeVJ4.js  CadDataExplorerPage-uoiLjsJh.js  CatalogPage-DH9exP0o.js  CatalogPage-DOIqDjR3.js  ChangeOrdersPage-BdGgnsc2.js  ChangeOrdersPage-Dw-TRd_N.js  ChatFullPage-CZwN0nJB.js  ChatFullPage-LrmsBYB0.js  (+210 more)
backend/alembic/versions/: 129188e46db8_init_create_all_tables.py  24f9595e16d0_add_co_rejected_fields.py  7f3ab0f2d4e1_phase2e_money_numeric.py  85f7cfa6eecf_co_unique_project_code.py  fee2e323c50c_merge_bim_req_with_dwg_annotations.py  v191_cde_audit.py  v191_dwg_entity_groups.py  v191_meetings_document_ids.py  v192_dwg_annotation_thickness_layer.py  v230_bim_element_asset_info.py  v230_reporting_schedule.py  v232_merge_money_and_contact_tenant_heads.py  v280_translation_cache.py  v281_match_project_settings.py  v290_dashboards_presets.py  v2916_project_budget_currency.py  v2918_risk_owner_user_id.py  v2a0_compliance_dsl_rules.py  v2b0_preset_sync_columns.py  v3033_audit_log.py  v3034_match_pipeline_stages.py  v3035_project_profile.py  v3046_clash_run_config.py  v3047_clash_severity_delta.py  v3048_clash_a2_metadata.py  v3049_clash_a4_intelligence.py  v3049_clash_collab.py  v3060_file_versions_trash.py  v3061_file_search_tags.py  v3062_file_savedviews_distribution.py  v3063_file_comments_references.py  v3064_file_transmittals_approvals.py  v3070_merge_files_waves.py  v3071_merge_clash_and_files.py  v3080_risk_pert_columns.py  v3081_punchlist_reopen_audit.py  v3082_changeorders_approval_chain.py  v3083_merge_v311_heads.py  v3084_procurement_scorecard_indices.py  v3085_tendering_addendum_leveling.py  (+41 more)
backend/app/: cli.py  cli_static.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: activity_feed.py  activity_feed_router.py  audit.py  audit_log.py  audit_router.py  bulk_ops.py  calendar.py  crypto.py  db_types.py  demo_ifc_generator.py  demo_projects.py  embedding_pool.py  event_handlers.py  events.py  file_signature.py  global_search.py  global_search_router.py  i18n.py  i18n_data.py  i18n_router.py  marketplace.py  module_loader.py  money.py  permissions.py  pg_optimizations.py  rate_limiter.py  sanitize.py  sidebar_badges_router.py  storage.py  tax.py  upload_guards.py  upload_streaming.py  url_safety.py  vector.py  vector_index.py
backend/app/middleware/: actor_context.py  fingerprint.py  request_id.py  security_headers.py  sqlite_retry.py
backend/app/scripts/: cleanup_demo_projects.py  create_tables.py  demo_seed_issues.md  enrich_demo_v2.py  export_showcase_snapshot.py  inject_test_variants.py  migrate_sqlite_to_postgres.py  reingest_bim_model.py  scaffold_module.py  seed_demo_estimates.py  seed_demo_v2.py  seed_demo_v2_resume.py  seed_international.py  seed_regional_indices.py  seed_showcase_geometry.py  seed_showcase_snapshot.py  verify_variants_import.py
backend/locales/: hi.json  hr.json  id.json  ro.json  th.json  vi.json
backend/scripts/: _inspect_group.py  _probe_projects.py  import_crm_priority.py
backend/tests/: conftest.py  test_ai_estimate_cost_tracking.py  test_partner_pack_core.py
backend/tests/eval/: __init__.py  baseline.json  compare.py  golden_set.yaml  judge.py  runner.py  test_eval_harness.py  test_match_determinism.py
backend/tests/integration/: _auth_helpers.py  test_admin_qa_reset.py  test_api_smoke.py  test_backup_export.py  test_bim_parquet_observability.py  test_bim_reingest.py  test_boq_bim_qty_source_roundtrip.py  test_boq_bulk_restore.py  test_boq_insert_position_and_nesting.py  test_boq_regression.py  test_boq_unit_consistency.py  test_boq_variants.py  test_boq_with_vat.py  test_clash_a4_endpoints.py  test_classification_country_nudge.py  test_compliance_dsl_api.py  test_compliance_nl_api.py  test_contracts_deep_audit.py  test_costs_intelligence.py  test_costs_match_api.py  test_critical_flows.py  test_crm_opportunities_limit.py  test_cross_module_flows.py  test_dashboard_rollup_perf.py  test_dashboards_federation_api.py  test_dashboards_idor.py  test_dashboards_presets_api.py  test_dashboards_sync_api.py  test_ddc_v18_real_invocation.py  test_demo_login_endpoint.py  test_document_template_currency.py  test_eac_idor.py  test_geo_hub_api.py  (+36 more)
packs/aus-nzs/: pyproject.toml
packs/brazil-sinapi/: pyproject.toml
packs/india-cpwd/: pyproject.toml
packs/modular-prefab/: pyproject.toml
packs/renewables-epc/: pyproject.toml
packs/saudi-vision2030/: pyproject.toml
(+2277 files in other folders)
